Fix misaligned Vision Pro video

--- a/styles.css
+++ b/styles.css
@@ -21,13 +21,11 @@
     margin-bottom: -40px;
   }
   
-  
   header {
     max-width: 100vw;
-overflow: hidden;
-    }
-    
-    
+    overflow: hidden;
+  }
+     
   .hero {
     z-index: -10;
     position: absolute;
@@ -115,11 +113,13 @@ overflow: hidden;
     padding-left: env(safe-area-inset-left);
     padding-right: env(safe-area-inset-right);
   }
+  
   .flourish-logo {
     margin-top: 48px;
     transition: 0.35s;
     filter: drop-shadow( 0 0 32px rgba(0, 0, 0, 1));}
   }
+  
   .vignette {
     font-size: 1.8em;
     margin: 0 0 1vw 0;
@@ -204,7 +204,6 @@ overflow: hidden;
   }   
      
    .video-card {
-    text-align: left;
     margin: auto;
     margin-top: 80px;
     padding: 0;
@@ -554,6 +553,14 @@ div#leftwing{
     	height: auto;
     }
   }
+
+  @media screen and (max-width: 1400px) {    
+   .video-card {
+      margin-left: 32px;
+      margin-right: 32px;
+    }    
+  }
+  
   
   /* Tablet landscape */
   @media screen and (max-height: 920px) {   
@@ -608,11 +615,6 @@ div#leftwing{
       max-width: 280px;
       min-height: 300px;
       box-shadow:0 4px 8px rgba(0, 0, 0, 0.06);
-    }
-    
-     .video-card {
-      margin-left: 32px;
-      margin-right: 32px;
     }
     
     .card h1  {
